Lobby with smoother mechanics
