# idl/contracts/gen/fastapi/src/idl_fastapi/idl/uno/model.py
@@ -238,7 +238,7 @@ class UnoSeatResult(BaseModel):
     model_config = ConfigDict(
         populate_by_name=True,
     )
-    outcome: Literal['SEAT_OUTCOME_UNSPECIFIED', 'SEAT_OUTCOME_TAKEN', 'SEAT_OUTCOME_TABLE_NOT_FOUND', 'SEAT_OUTCOME_NOT_OFFERED', 'SEAT_OUTCOME_VERSION_MOVED', 'SEAT_OUTCOME_VACATED', 'SEAT_OUTCOME_LEFT', 'SEAT_OUTCOME_NOT_SEATED', 'SEAT_OUTCOME_NOT_AT_TABLE', 'SEAT_OUTCOME_CREATED', 'SEAT_OUTCOME_JOINED', 'SEAT_OUTCOME_ALREADY_AT_TABLE', 'SEAT_OUTCOME_NOT_ACCEPTING_PLAYERS', 'SEAT_OUTCOME_GAME_NOT_HOSTED', 'SEAT_OUTCOME_SEAT_COUNT_NOT_ALLOWED'] | None = (
+    outcome: Literal['SEAT_OUTCOME_UNSPECIFIED', 'SEAT_OUTCOME_TAKEN', 'SEAT_OUTCOME_TABLE_NOT_FOUND', 'SEAT_OUTCOME_NOT_OFFERED', 'SEAT_OUTCOME_VERSION_MOVED', 'SEAT_OUTCOME_VACATED', 'SEAT_OUTCOME_LEFT', 'SEAT_OUTCOME_NOT_SEATED', 'SEAT_OUTCOME_NOT_AT_TABLE', 'SEAT_OUTCOME_CREATED', 'SEAT_OUTCOME_JOINED', 'SEAT_OUTCOME_ALREADY_AT_TABLE', 'SEAT_OUTCOME_NOT_ACCEPTING_PLAYERS', 'SEAT_OUTCOME_GAME_NOT_HOSTED', 'SEAT_OUTCOME_SEAT_COUNT_NOT_ALLOWED', 'SEAT_OUTCOME_TABLE_FULL'] | None = (
         None
     )
     table: UnoTable | None = None
